--- a/style.css
+++ b/style.css
@@ -15,3 +15,17 @@
 img {
   height: 40%;
 }
+.section1,
+.section2 {
+  height: 70px;
+  width: 190px;
+  background-color: midnightblue;
+  color: whitesmoke;
+  border: 2px solid rgb(177, 114, 41);
+  border-radius: 3px;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 2px 5px rgb(26, 25, 23);
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
